--- a/css/styles1.css
+++ b/css/styles1.css
@@ -1,3 +1,23 @@
-body {
+h1 {
+  color: red;
   text-align: center;
+  font-weight: 400;
+}
+
+h2 {
+  font-style: italic;
+  text-align: center;
+}
+
+p {
+  font-family: sans-serif;
+}
+
+ul {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+img {
+  max-width: 300px;
 }
